--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,16 +1,18 @@
 {
-  "branches": ["main"],
-  "tagFormat": "v${version}",
-  "plugins": [
-    ["@semantic-release/commit-analyzer", { "preset": "conventionalcommits" }],
-    ["@semantic-release/release-notes-generator", { "preset": "conventionalcommits" }],
-    ["@semantic-release/changelog", { "changelogFile": "CHANGELOG.md" }],
-    ["@semantic-release/npm", { "pkgRoot": "." }],
-    ["@semantic-release/github", { "assets": [] }],
-    [
-      "@semantic-release/git",
-      { "assets": ["package.json", "CHANGELOG.md"], "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}" }
-    ]
-  ]
+	"branches": ["main"],
+	"tagFormat": "v${version}",
+	"plugins": [
+		["@semantic-release/commit-analyzer", { "preset": "conventionalcommits" }],
+		["@semantic-release/release-notes-generator", { "preset": "conventionalcommits" }],
+		["@semantic-release/changelog", { "changelogFile": "CHANGELOG.md" }],
+		["@semantic-release/npm", { "pkgRoot": "." }],
+		["@semantic-release/github", { "assets": [] }],
+		[
+			"@semantic-release/git",
+			{
+				"assets": ["package.json", "CHANGELOG.md"],
+				"message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
+			}
+		]
+	]
 }
-
