--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
 	],
 	"devDependencies": {
 		"@babel/core": "^7.28.3",
+		"@commitlint/cli": "^19.8.1",
+		"@commitlint/config-conventional": "^19.8.1",
 		"@semantic-release/changelog": "^6.0.3",
 		"@semantic-release/commit-analyzer": "^13.0.1",
 		"@semantic-release/git": "^10.0.1",
