--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -15,17 +15,25 @@ permissions:
     contents: read # to fetch code (actions/checkout)
 
 jobs:
-    Lint:
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v3
-            - uses: pnpm/action-setup@v2.4.0
-            - uses: actions/setup-node@v3
-              with:
-                  node-version: '16.x'
-                  cache: pnpm
-            - name: install
-              run: pnpm install --frozen-lockfile
-            - name: lint
-              if: (${{ success() }} || ${{ failure() }})
-              run: pnpm lint
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 'lts/*'
+          cache: 'pnpm'
+
+      - name: Enable corepack and set pnpm version
+        run: |
+          corepack enable
+          corepack prepare pnpm@8.6.12 --activate
+
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
+
+      - name: Lint
+        run: pnpm run lint
