--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,50 +7,88 @@ on:
         branches: [main]
 
 jobs:
-    commitlint:
-        if: ${{ github.event_name == 'pull_request' }}
-        runs-on: ubuntu-latest
-        steps:
-            - name: Checkout
-              uses: actions/checkout@v4
-              with:
-                  fetch-depth: 0
-            - name: Commitlint
-              uses: wagoid/commitlint-github-action@v5
-              with:
-                  configFile: commitlint.config.cjs
+  commitlint:
+    if: ${{ github.event_name == 'pull_request' }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - name: Commitlint
+        uses: wagoid/commitlint-github-action@v5
+        with:
+          configFile: commitlint.config.cjs
 
-    build:
-        runs-on: ubuntu-latest
-        steps:
-            - name: Checkout
-              uses: actions/checkout@v4
+  build_pr:
+    if: ${{ github.event_name == 'pull_request' }}
+    needs: [commitlint]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
 
-            - name: Setup Node.js
-              uses: actions/setup-node@v4
-              with:
-                  node-version: 'lts/*'
-                  cache: 'pnpm'
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 'lts/*'
+          cache: 'pnpm'
 
-            - name: Enable corepack and set pnpm version
-              run: |
-                  corepack enable
-                  corepack prepare pnpm@8.6.12 --activate
+      - name: Enable corepack and set pnpm version
+        run: |
+          corepack enable
+          corepack prepare pnpm@8.6.12 --activate
 
-            - name: Install dependencies
-              run: pnpm install --frozen-lockfile
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
 
-            - name: Lint
-              run: pnpm run lint
+      - name: Lint
+        run: pnpm run lint
 
-            - name: Type Check
-              run: pnpm run check
+      - name: Type Check
+        run: pnpm run check
 
-            - name: Build Storybook
-              run: pnpm run build-storybook
+      - name: Build Storybook
+        run: pnpm run build-storybook
 
-            - name: Upload Storybook artifact
-              uses: actions/upload-artifact@v4
-              with:
-                  name: storybook-static
-                  path: storybook-static
+      - name: Upload Storybook artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: storybook-static
+          path: storybook-static
+
+  build_push:
+    if: ${{ github.event_name == 'push' }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 'lts/*'
+          cache: 'pnpm'
+
+      - name: Enable corepack and set pnpm version
+        run: |
+          corepack enable
+          corepack prepare pnpm@8.6.12 --activate
+
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
+
+      - name: Lint
+        run: pnpm run lint
+
+      - name: Type Check
+        run: pnpm run check
+
+      - name: Build Storybook
+        run: pnpm run build-storybook
+
+      - name: Upload Storybook artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: storybook-static
+          path: storybook-static
