--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
 		"test:unit": "vitest",
 		"lint": "prettier --check . && eslint .",
 		"format": "prettier --write .",
-		"storybook": "storybook dev -p 6006",
+		"storybook": "storybook dev -p 6006 --ci --no-open --disable-telemetry",
 		"build-storybook": "storybook build",
 		"release": "semantic-release"
 	},
@@ -41,6 +41,7 @@
 	],
 	"devDependencies": {
 		"@babel/core": "^7.28.3",
+		"@chromatic-com/storybook": "^4.1.1",
 		"@commitlint/cli": "^19.8.1",
 		"@commitlint/config-conventional": "^19.8.1",
 		"@semantic-release/changelog": "^6.0.3",
@@ -49,9 +50,11 @@
 		"@semantic-release/github": "^11.0.5",
 		"@semantic-release/npm": "^12.0.2",
 		"@semantic-release/release-notes-generator": "^14.0.3",
+		"@storybook/addon-a11y": "^9.1.4",
 		"@storybook/addon-docs": "^9.1.4",
+		"@storybook/addon-links": "^9.1.4",
 		"@storybook/addon-svelte-csf": "^5.0.8",
-		"@storybook/addon-viewport": "^9.0.8",
+		"@storybook/addon-vitest": "^9.1.4",
 		"@storybook/svelte": "^9.1.4",
 		"@storybook/sveltekit": "^9.1.4",
 		"@sveltejs/adapter-auto": "^6.1.0",
@@ -59,11 +62,14 @@
 		"@sveltejs/package": "^2.5.0",
 		"@sveltejs/vite-plugin-svelte": "^6.1.4",
 		"@tailwindcss/line-clamp": "^0.4.4",
-		"@tailwindcss/postcss": "^4.1.12",
+		"@tailwindcss/postcss": "^4.1.13",
+		"@tailwindcss/vite": "^4.1.13",
 		"@tsconfig/svelte": "^5.0.5",
 		"@types/youtube": "^0.1.2",
 		"@typescript-eslint/eslint-plugin": "^8.42.0",
 		"@typescript-eslint/parser": "^8.42.0",
+		"@vitest/browser": "3.2.4",
+		"@vitest/coverage-v8": "3.2.4",
 		"@xstate/cli": "^0.5.17",
 		"@xstate/graph": "^3.0.4",
 		"@xstate/svelte": "^5.0.0",
@@ -75,8 +81,8 @@
 		"eslint-config-prettier": "^10.1.8",
 		"eslint-plugin-storybook": "^9.1.4",
 		"eslint-plugin-svelte": "^3.12.1",
-		"eslint-plugin-svelte3": "^4.0.0",
 		"globals": "^16.3.0",
+		"playwright": "^1.55.0",
 		"postcss": "^8.5.6",
 		"postcss-cli": "^11.0.1",
 		"prettier": "^3.6.2",
@@ -86,13 +92,13 @@
 		"react-dom": "^19.1.1",
 		"semantic-release": "^24.2.7",
 		"storybook": "^9.1.4",
-		"svelte": "^5.38.6",
+		"svelte": "^5.38.7",
 		"svelte-check": "^4.3.1",
 		"svelte-eslint-parser": "^1.3.1",
 		"svelte-loader": "^3.2.4",
 		"svelte-preprocess": "^6.0.3",
 		"svelte2tsx": "^0.7.42",
-		"tailwindcss": "^4.1.12",
+		"tailwindcss": "^4.1.13",
 		"tslib": "^2.8.1",
 		"typescript": "^5.9.2",
 		"typescript-eslint": "^8.42.0",
